some PMD violations removed
git-svn-id: http://svn.apache.org/repos/asf/myfaces/tomahawk/trunk@415126 13f79535-47bb-0310-9956-ffa450edef68